button img align fixed

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,13 @@
     border-radius: 4px;
     color: #FFFFFF;
     background-color: #469165;
-    font-weight: 400;
+    font-weight: 500;
+    display: inline-flex;
+    gap: 8px;
+    align-items: center;
+    justify-content: center;
+    height: 48px;
+    cursor: pointer;
 }
 
 .btn img {
